# shady-stack

./: README.md  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: Automatic_PIPY_Publish.yml  Automatic_Sphinx_Documentation.yml  Automatic_Unit_Tests.yml  default.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  placeholder.tmp  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
shady-backend/: api_tools.py  discord_bridge.py  top_level.py
shady_backend/: __init__.py
shady_backend/default_demon/: demon.py
shadybackend/: __init__.py  api_tools.py  bridges.py  demon.py  discord_bridge.py  log.py  request_tools.py  top_level.py
sphinx_docs/: conf.py  index.rst  requirements.txt
src/: top_level.py
src/bridge/: discord_bridge.py
src/default_demon/: api_tools.py  data_types.py  demon.py  tree.py
src/util/: api_tools.py
