[tool.poetry]
name = "shadybackend"
version = "0.1.0"
description = "The default tool-chain for the SHADY STACK."
authors = ["USER 1103 <79700949+user-1103@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "shadybackend"}]
documentation = "https://user-1103.github.io/shady-stack/index.html#"
repository = "https://github.com/user-1103/shady-stack"
keywords = ["web", "stack", "webhooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Other/Proprietary License"
]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.2.0"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shadybackend = 'shadybackend:main'
